--- a/app/assets/stylesheets/general.sass
+++ b/app/assets/stylesheets/general.sass
@@ -49,7 +49,7 @@ html
 						margin-top: 20px
 						width: 100%
 
-			p.intro-paragraph
+			.intro-paragraph
 				color: #767676
 			form
 				.field
