--- a/app/views/student_application_form/_first_step.erb
+++ b/app/views/student_application_form/_first_step.erb
@@ -30,7 +30,7 @@
         'SICUE/SENECA',
         'Other'
 
-        ],{}, {disabled: review} %>
+        ],{}, {include_blank: true, disabled: review } %>
       </div>
     </div>
 
