--- a/app/views/users/review_dashboard.html.erb
+++ b/app/views/users/review_dashboard.html.erb
@@ -88,9 +88,10 @@
 				</div>
 			</div>
 
-			<%= render partial: "users/learning_agreement_panel", :locals => {
+			<%= render partial: "users/user_dashboard_panel", :locals => {
 					:admin => true,
 					:name => :learning_agreement,
+					:current_user => current_user,
 					:content => current_user.learning_agreement,
 					:file_name => current_user.learning_agreement_file_name,
 					:label => "Learning Agreement"}  %>
