--- a/app/views/users/_user_dashboard_panel.html.erb
+++ b/app/views/users/_user_dashboard_panel.html.erb
@@ -14,16 +14,35 @@
 			<% if name === :ni_passport %>
 				<b>Type of document:</b>  <%= current_user["ni_type"] == "id" ? "Identity card" : "Passport"%>
 			<%end %>
+			<% if name === :learning_agreement %>
+				<%= render partial: "users/learning_agreement_panel", :locals => {
+						:admin => admin,
+						:name => name,
+						:current_user => current_user,
+						:content => content,
+						:file_name => file_name,
+						:label => "Learning Agreement"}  %>
+			<%end %>
 			<div class="align-right">
 				<div class="file-name"><i class="mdi mdi-file"></i> <span class=""> <%= link_to  file_name,  content.url %></span></div>
 				<%unless admin === true  %>
-				<%= button_to "Delete", user_file_delete_url(:id => current_user.id, :attachment => name), :method=> :delete, :class => "custom-button" , :form_class =>   "deletion" %>	
-				<%end%>
+					<%= button_to "Delete", user_file_delete_url(:id => current_user.id, :attachment => name), :method=> :delete, :class => "custom-button" , :form_class =>   "deletion" %>
+
+			<%end%>
 				<a href="<%=  content.url%>" download="<%=  file_name %>"><button class="custom-button primary">Download</button></a>
 			</div>
 		</div>
 	<% else %>
 		<div class="collapsible">
+			<% if name === :learning_agreement %>
+				<%= render partial: "users/learning_agreement_panel", :locals => {
+						:admin => admin,
+						:name => name,
+						:current_user => current_user.blank? ? nil: current_user,
+						:content => content,
+						:file_name => file_name,
+						:label => "Learning Agreement"}  %>
+			<%end %>
 			<%unless admin === true  %>
 				<%= form_for current_user, url: user_file_upload_path, html: { multipart: true , }, :method => :POST do |form| %>
 					<% if name === :ni_passport %>
