--- a/app/views/users/_learning_agreement_panel.erb
+++ b/app/views/users/_learning_agreement_panel.erb
@@ -85,18 +85,18 @@
   <h2 class="title">What to study at ETSIT</h2>
   <button class="transparent-button action-button right close" id="info-degrees-dialog-close"><i class="mdi mdi-close"></i></button>
   <ul>
-    <li class="info-degree"><a href="http://www.etsit.upm.es/estudios/grado-en-ingenieria-de-tecnologias-y-servicios-de-telecomunicacion.html">Grado en Ingeniería de Tecnologías y Servicios de Telecomunicación (GITST)</a> </li>
-    <li class="info-degree"><a href="http://www.etsit.upm.es/estudios/grado-en-ingenieria-biomedica.html">Grado en Ingeniería Biomédica (GIB)</a> </li>
-    <li class="info-degree"><a href="http://www.etsit.upm.es/estudios/master-universitario-en-ingenieria-de-telecomunicacion.html">Máster Universitario en Ingeniería de Telecomunicación (MUIT)</a> </li>
-    <li class="info-degree"><a href="http://www.etsit.upm.es/estudios/masteres-oficiales/programas-ofertados/master-u-ciberseguridad.html">Máster Universitario en Ciberseguridad (MUIB)</a> </li>
-    <li class="info-degree"><a href="http://www.etsit.upm.es/estudios/masteres-oficiales/programas-ofertados/master-u-energia-solar-fotovoltaica.html">Máster Universitario en Energía Solar Fotovoltaica (MUESFV)</a> </li>
-    <li class="info-degree"><a href="http://www.etsit.upm.es/estudios/masteres-oficiales/programas-ofertados/master-u-ingenieria-biomedica.html">Máster Universitario en Ingeniería Biomédica (MUIB)</a> </li>
-    <li class="info-degree"><a href="http://www.etsit.upm.es/estudios/masteres-oficiales/programas-ofertados/master-u-ingenieria-de-redes-y-servicios-telematicos.html">Máster Universitario en Ingeniería de Redes y Servicios Telemáticos (MUIRST)</a> </li>
-    <li class="info-degree"><a href="http://www.etsit.upm.es/estudios/masteres-oficiales/programas-ofertados/master-u-ingenieria-de-sistemas-electronicos.html">Máster Universitario en Ingeniería de Sistemas Electrónicos (MUISE)</a> </li>
-    <li class="info-degree"><a href="http://www.etsit.upm.es/?id=2074">Máster Universitario en Ingeniería Fotónica (MUIF)</a> </li>
-    <li class="info-degree"><a href="http://www.etsit.upm.es/estudios/masteres-oficiales/programas-ofertados/master-u-tratamiento-estadistico-computacional-de-la-informacion.html">Máster Universitario en Tratamiento Estadístico-Computacional de la Información (MUTECI)</a> </li>
-    <li class="info-degree"><a href="http://www.etsit.upm.es/?id=2077">Master of Science in Signal Theory and Communications (MUSTC)</a> </li>
+    <li class="info-degree"><a target="_blank" href="http://www.etsit.upm.es/estudios/grado-en-ingenieria-de-tecnologias-y-servicios-de-telecomunicacion.html">Grado en Ingeniería de Tecnologías y Servicios de Telecomunicación (GITST)</a> </li>
+    <li class="info-degree"><a target="_blank" href="http://www.etsit.upm.es/estudios/grado-en-ingenieria-biomedica.html">Grado en Ingeniería Biomédica (GIB)</a> </li>
+    <li class="info-degree"><a target="_blank" href="http://www.etsit.upm.es/estudios/master-universitario-en-ingenieria-de-telecomunicacion.html">Máster Universitario en Ingeniería de Telecomunicación (MUIT)</a> </li>
+    <li class="info-degree"><a target="_blank" href="http://www.etsit.upm.es/estudios/masteres-oficiales/programas-ofertados/master-u-ciberseguridad.html">Máster Universitario en Ciberseguridad (MUIB)</a> </li>
+    <li class="info-degree"><a target="_blank" href="http://www.etsit.upm.es/estudios/masteres-oficiales/programas-ofertados/master-u-energia-solar-fotovoltaica.html">Máster Universitario en Energía Solar Fotovoltaica (MUESFV)</a> </li>
+    <li class="info-degree"><a target="_blank" href="http://www.etsit.upm.es/estudios/masteres-oficiales/programas-ofertados/master-u-ingenieria-biomedica.html">Máster Universitario en Ingeniería Biomédica (MUIB)</a> </li>
+    <li class="info-degree"><a target="_blank" href="http://www.etsit.upm.es/estudios/masteres-oficiales/programas-ofertados/master-u-ingenieria-de-redes-y-servicios-telematicos.html">Máster Universitario en Ingeniería de Redes y Servicios Telemáticos (MUIRST)</a> </li>
+    <li class="info-degree"><a target="_blank" href="http://www.etsit.upm.es/estudios/masteres-oficiales/programas-ofertados/master-u-ingenieria-de-sistemas-electronicos.html">Máster Universitario en Ingeniería de Sistemas Electrónicos (MUISE)</a> </li>
+    <li class="info-degree"><a target="_blank" href="http://www.etsit.upm.es/?id=2074">Máster Universitario en Ingeniería Fotónica (MUIF)</a> </li>
+    <li class="info-degree"><a target="_blank" href="http://www.etsit.upm.es/estudios/masteres-oficiales/programas-ofertados/master-u-tratamiento-estadistico-computacional-de-la-informacion.html">Máster Universitario en Tratamiento Estadístico-Computacional de la Información (MUTECI)</a> </li>
+    <li class="info-degree"><a target="_blank" href="http://www.etsit.upm.es/?id=2077">Master of Science in Signal Theory and Communications (MUSTC)</a> </li>
   </ul>
   <br/>
-  <p class="more-info">More degrees available at <b><a href="http://upm.es">upm.es</a></b>.</p>
+  <p class="more-info">More degrees available at <b><a target="_blank" href="http://upm.es">upm.es</a></b>.</p>
 </div>
