--- a/app/views/users/admin_dashboard.html.erb
+++ b/app/views/users/admin_dashboard.html.erb
@@ -275,3 +275,4 @@
     </div>
 
   <br/><br/> </div>
+<div class="intro-paragraph right s12"><a href="<%= RELATIVE_URL %>/generate_csv" download="students.csv"><u>Download csv</u></a></div>
