--- a/app/views/student_application_form/_first_step.erb
+++ b/app/views/student_application_form/_first_step.erb
@@ -10,11 +10,12 @@
   <div class="flex-container">
     <%= f.label :academic_year %><br />
     <%= f.select :academic_year, [
+       '',
       '2018-2019: Spring Semester',
       '2019-2020: Fall Semester',
       '2019-2020: Spring Semester',
       '2019-2020: Academic Year',
-      ],{}, {disabled: review}%>
+      ],{disabled: '', selected: sap.academic_year ? sap.academic_year : ''}, {disabled: review}%>
     </div>
   </div>
 
@@ -22,6 +23,7 @@
     <div class="flex-container">
       <%= f.label :programme %><br />
       <%= f.select :programme, [
+        '',
         'Eramus+ Studies',
         'Eramus+ Placement',
         'Magalhães',
@@ -30,14 +32,17 @@
         'SICUE/SENECA',
         'Other'
 
-        ],{}, {include_blank: true, disabled: review } %>
+        ],{disabled: '', selected: sap.programme ? sap.programme : ''}, {include_blank: true, disabled: review } %>
       </div>
     </div>
 
     <div class="field field50">
       <div class="flex-container">
         <%= f.label :field_of_study %><br />
-        <%= f.select :field_of_study, ["Telecommunication Engineering","Biomedical Engineering"],{}, {disabled: review} %>
+        <%= f.select :field_of_study, [
+            "Telecommunication Engineering",
+            "Biomedical Engineering"
+            ], {}, {disabled: review} %>
       </div>
     </div>
 
