--- a/app/views/users/user_dashboard.html.erb
+++ b/app/views/users/user_dashboard.html.erb
@@ -58,7 +58,7 @@
 						<div class="second-container-right">
 							<span class="student-application-form-progress"><%=sap.completed_percentage(is_signed)%></span>
 							<%if finish_app_form %>
-								<span class="check_mark" style="float: none;" title="You must upload your applicatioon form signed in order to complete the progress"><i class="mdi mdi-alert orange"></i></span>
+								<span class="check_mark" style="float: none;" title="You must upload your application form signed in order to complete the progress"><i class="mdi mdi-alert orange"></i></span>
 							<%end%>
 							<%if finish_and_uploaded %>
 								<span class="check_mark" style="float: none;"><i class="mdi mdi-check green"></i></span>
