--- a/app/views/student_application_form/_fourth_step.erb
+++ b/app/views/student_application_form/_fourth_step.erb
@@ -4,18 +4,17 @@
 <%end%>
 <!--<p class="intro-paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>-->
 <div class="edit_student_application_flex languages">
-
 	<div class="field main_lang">
 	  <div class="flex-container">
 	    <%= f.label :mother_tongue %><br />
-	    <%= f.select :mother_tongue, languages_list, {}, {disabled: review} %>
+	    <%= f.select :mother_tongue, languages_list, {disabled: '', selected: sap.mother_tongue ? sap.mother_tongue : ''}, {disabled: review} %>
 	  </div>
 	</div>
 
 	<div class="field main_lang">
 	  <div class="flex-container">
 	    <%= f.label :language_instruction %><br />
-	     <%= f.select :language_instruction, languages_list, {}, {disabled: review} %>
+	     <%= f.select :language_instruction, languages_list, {disabled: '', selected: sap.language_instruction ? sap.language_instruction : ''}, {disabled: review} %>
 	  </div>
 	</div>
 	<div style="width:100%"></div>
@@ -34,11 +33,11 @@
 			<div class="field">
 				<div class="flex-container first-fc">
 					<label for="name">Language</label>
-					<select  name="student_application_form[languages][][name]" class="language-input" <%=review ? "disabled" : ""%>  >
+					<select  required name="student_application_form[languages][][name]" class="language-input" <%=review ? "disabled" : ""%>  >
 						<% selected_lang = language.name.to_s || "English" %>
+						<option value  <%= selected_lang  ? "" : "selected" %> disabled  ></option>
 						<% languages_list.each do |lang| %>
 							<option <%= selected_lang == lang ? "selected" : "" %>><%=lang%></option>
-
 						<% end %>
 					</select>
 				</div>
